--- a/content/publication/academic-publications.bib
+++ b/content/publication/academic-publications.bib
@@ -438,6 +438,20 @@ JC printed pdf},
   file = {/home/juank/Dropbox/zoterojcydocs/storage/ZFQDFCH3/Castillo et al. - 2021 - Measuring Attitudes Towards Gender Equality in Int.pdf}
 }
 
+@article{castillo_measuring_2021a,
+  title = {Measuring Perceptions and Preferences for Meritocracy},
+  author = {Castillo, Juan and Sanhueza, Julio César Iturra and Rivas, Francisco Javier Meneses and Maldonado, Luis and Atria, Jorge},
+  year = {2021},
+  month = dec,
+  journal = {Socarxiv OSF preprint},
+  url = {https://osf.io/m7kef/},
+  urldate = {2020-06-19},
+  langid = {american},
+  keywords = {submitted},
+  annotation = {[OSF Preregistration](https://osf.io/z45y2)[Github Repo](https://github.com/justicia-distributiva/merit-scale)},
+  file = {/home/juank/Dropbox/zoterojcydocs/storage/L9LCDDBB/z45y2.html}
+}
+
 @incollection{castillo_medicion_2019,
   title = {Medición de actitudes hacia la igualdad de derechos entre géneros en pruebas internacionales: Implicancias respecto a su validez.},
   booktitle = {Validez de evaluaciones educacionales en Chile y Latinoamérica},
@@ -512,19 +526,16 @@ JC printed pdf},
   file = {/home/juank/Dropbox/zoterojcydocs/storage/2BBNYBCU/Castillo et al. - 2012 - Percepción de Desigualdad Económica en Chile Medi.pdf}
 }
 
-@article{castillo_perceptions_2019a,
-  title = {Perceptions and Preferences for Meritocracy Scale (Submitted)},
-  author = {Castillo, Juan and Sanhueza, Julio César Iturra and Rivas, Francisco Javier Meneses and Maldonado, Luis},
-  year = {2019},
-  month = nov,
-  journal = {OSF Preregistration},
-  doi = {10.17605/OSF.IO/Z45Y2},
-  url = {https://osf.io/z45y2},
-  urldate = {2020-06-19},
-  langid = {american},
-  keywords = {submitted},
-  annotation = {[OSF Preregistration[(https://osf.io/z45y2)[Github Repo](https://github.com/justicia-distributiva/merit-scale)},
-  file = {/home/juank/Dropbox/zoterojcydocs/storage/L9LCDDBB/z45y2.html}
+@article{castillo_perception_2022,
+  title = {Perception of Economic Inequality: Concepts, Associated Factors and Prospects of a Burgeoning Research Agenda},
+  author = {Castillo, Juan-Carlos and {García-Castro}, Juan Diego and Venegas, Martín},
+  year = {2022},
+  journal = {International Journal of Social Psychology},
+  volume = {Forthcoming},
+  doi = {10.1080/02134748.2021.2009275},
+  url = {https://www.researchgate.net/publication/356388974_Perception_of_economic_inequality_Concepts_associated_factors_and_prospects_of_a_burgeoning_research_agenda_Percepcion_de_desigualdad_economica_conceptos_factores_asociados_y_proyecciones_de_una_agend},
+  abstract = {Perceptions of economic inequality have become a topic of growing interest in research from different social science disciplines. This article presents an up-to-date literature review of studies on this topic, stressing aspects related to its conceptualisation and measurement, as well as psychosocial, socioeconomic and contextual factors associated with the perception of inequality. This review ends by pointing out some consequences of perception of inequality and identifying some pathways for future research agendas KEYWORDS perception of economic inequality, measuring the perception of inequality, economic inequality, social status  --- RESUMEN ESPAÑOL: La percepción de desigualdad económica se ha vuelto un tema de creciente interés en investigaciones de distintas disciplinas de las ciencias sociales. El presente artículo presenta una revisión actualizada del estado del arte de los estudios en este tema, destacando aspectos de conceptualización, medición, así como factores psicosociales, socioeconómicos y contextuales vinculados a la percepción de desigualdad. Esta revisión termina señalando algunas consecuencias de la percepción de la desigualdad e identificando algunas vías de desarrollo para agendas de investigación a futuro. PALABRAS CLAVE percepción de desigualdad económica, medición de percepción de desigualdad, desigualdad económica, posición social},
+  keywords = {distributive fairness,inequality perception}
 }
 
 @incollection{castillo_redistribucion_2014,
@@ -1001,7 +1012,7 @@ Internal and external attributions of poverty - Germany 1991/ 2006. ISJP-Arbeits
   url = {http://www.sciencedirect.com/science/article/pii/S0049089X15000538},
   urldate = {2015-07-18},
   abstract = {In the wake of rising levels of income inequality during the past two decades, widespread concerns emerged about the social and political consequences of the widening gap between the poor and the rich that can be observed in many established democracies. Several empirical studies substantiate the link between macro-level income inequality and political attitudes and behavior, pointing at its broad and negative implications for political equality. Accordingly, these implications are expected to be accentuated in contexts of high inequality, as is the case in Latin America. Despite these general concerns about the consequences of income inequality, few studies have accounted for the importance of individual perceptions of distributive fairness in regard to trust in political institutions. Even less is known about the extent to which distributive fairness perceptions co-vary with objective indicators of inequality. Moreover, the research in this area has traditionally focused on OECD countries, which have lower indexes of inequality than the rest of the world. This study aims at filling this gap by focusing on the relevance of distributive fairness perceptions and macro-level inequality for political trust and on how these two levels interact in Latin American countries. The analyses are based on the Latinobarometer survey 2011, which consists of 18 countries. Multilevel estimations suggest that both dimensions of inequality are negatively associated with political trust but that higher levels of macro-level inequality attenuate rather than increase the strength of the negative association between distributive fairness perceptions and political trust.},
-  keywords = {Distributive fairness,Income inequality,Latin America,Political trust},
+  keywords = {distributive fairness,Income inequality,Latin America,Political trust},
   file = {/home/juank/Dropbox/zoterojcydocs/storage/6RZRWA58/S0049089X15000538.html}
 }
 
