--- a/content/publication/academic-publications.bib
+++ b/content/publication/academic-publications.bib
@@ -114,6 +114,14 @@
   file = {/home/juank/Dropbox/zoterojcydocs/storage/C7WF6PUS/Bascopé et al. - 2015 - Curricular guidelines and citizenship attitudes in.pdf;/home/juank/Dropbox/zoterojcydocs/storage/ZBTUSVMY/scielo.html}
 }
 
+@article{beck_redes_2022,
+  title = {Redes de Contacto y Justificación de La Desigualdad Social: Una Exploración Desde El Caso Chileno.},
+  author = {Beck, Guillermo and Bargsted, Matías and Castillo, Juan-Carlos},
+  year = {2022},
+  journal = {Enviado a revista},
+  abstract = {Respecto a justificación de la desigualdad social, la literatura muestra que los factores individuales y estructurales colaboran en la conformación de ideales en esta materia. En menor medida, se han desarrollado estudios que denotan la importancia de los vínculos sociales, sin embargo, estos se remiten a ambientes acotados, siendo poca la evidencia que relaciona este aspecto a contextos sociales ampliados. El objetivo del estudio es indagar cómo los vínculos sociales conforman ideales sobre justificación de la desigualdad social. Para ello, se propone utilizar el enfoque de redes sociales egocéntricas. Utilizando la encuesta ELSOC 2016 (n=2983), y por medio de modelos de regresión logístico ordinales, se testea si características de las redes, composición y diversidad, se relacionan con la justificación de la desigualdad social en Chile. Los resultados indican que las redes se asocian negativamente a la justificación de la desigualdad social en Chile en materia de bienestar y derechos sociales.}
+}
+
 @misc{breznau_crowdsourced_2019,
   type = {OSF Preprint},
   title = {The Crowdsourced Replication Initiative: Investigating Immigration and Social Policy Preferences. Executive Report.},
@@ -134,7 +142,7 @@
 @techreport{castillo_actitudes_2014,
   type = {Temas de la Agenda Pública},
   title = {Actitudes hacia el trabajo y justicia salarial en Chile},
-  author = {Castillo, Juan- Carlos},
+  author = {Castillo, Juan-Carlos},
   year = {2014},
   number = {66},
   pages = {33--44},
@@ -179,6 +187,34 @@
   file = {/home/juank/Dropbox/zoterojcydocs/storage/VBKVHQUU/Castillo et al. - 2013 - Clivajes partidarios y cambios en preferencias dis.pdf}
 }
 
+@techreport{castillo_cohesion_2022,
+  type = {Documentos de Proyecto (Forthcoming)},
+  title = {Cohesión Social En Chile En Tiempos de Cambio: Indicadores, Perfiles y Factores Asociados},
+  author = {Castillo, Juan-Carlos and Espinoza, Vicente and Barozet, Emmanuelle},
+  year = {2022},
+  address = {Santiago},
+  institution = {CEPAL},
+  url = {https://cohesion-cepal.netlify.app/},
+  abstract = {El interés por el estudio de la cohesión social posee una larga trayectoria tanto académica como así también desde el estado y de organizaciones con interés público. La cohesión social aparece como una aspiración normativa de una sociedad mejor, vinculada a conceptos como lazos sociales de calidad, pertenencia, y confianza en los demás y en el estado. Se asume también que un estado de adecuada cohesión social es producto de condiciones estructurales y políticas que apunten a mayor igualdad, integración y oportunidades, por lo cual muchas veces se refiere a ella como un horizonte o una consecuencia de buenas políticas sociales. Sin duda este horizonte normativo reaparece con fuerza en tiempos caracterizados por crisis económica producto de la pandemia, polarización política, y la extrema concentración de ingreso y privilegios que caracteriza las sociedades actuales y donde el caso Chileno claramente no es una excepción. El renovado interés por la cohesión social nos lleva necesariamente a volver sobre su definición, sus alcances y su medición. Si bien existen muchas diferencias en las aproximaciones y definiciones en este tema, en los últimos años surge una convergencia hacia el carácter multidimensional de la cohesión social, que incorpora elementos como relaciones sociales de igualdad, sentido de pertenencia y orientación hacia el bien común. Partiendo desde una definición de cohesión social de la CEPAL (2021), este reporte de investigación presenta inicialmente una propuesta de indicadores de cohesión social basada en la Encuesta Longitudinal Social de Chile - ELSOC 2016-2020, producida por COES. El carácter longitudinal-panel de esta encuesta nos permite realizar posteriormente un análisis de los cambios ocurridos en nueve indicadores de cohesión social en Chile entre los años 2016 y 2020. Finalmente, se presenta una propuesta de tres perfiles de cohesión social en la sociedad chilena así como también su caracterización socioeconómica y regional.},
+  keywords = {elsoc,social cohesion},
+  annotation = {[Github Repo](https://github.com/ocscoes/cohesion-cepal)}
+}
+
+@techreport{castillo_conceptos_2021a,
+  type = {Documentos de Trabajo COES},
+  title = {Conceptos y Medición de Cohesión Social En Proyectos Internacionales},
+  author = {Castillo, Juan-Carlos and Olivos, Francisco and Iturra, Julio},
+  year = {2021},
+  number = {47},
+  pages = {1--37},
+  address = {Santiago},
+  institution = {COES},
+  url = {https://github.com/ocscoes/concepto-medicion/blob/main/DT47.%20Conceptos%20y%20medici%C3%B3n%20de%20cohesi%C3%B3n%20social%20en%20proyectos%20internacionales.pdf},
+  abstract = {Este documento tiene por objetivo describir y resumir diferentes aproximaciones conceptuales y metodológicas hacia el concepto de cohesión social. Originalmente fue desarrollado para servir como insumo en la generación del Observatorio de Cohesión Social (OCS) del Centro de Estudios de Conflicto y Cohesión Social (COES), cuyo objetivo es proponer indicadores de cohesión social con foco en América Latina basados en datos secundarios y permitir la realización de análisis en una plataforma interactiva.},
+  keywords = {social cohesion},
+  annotation = {ISSN 0719-6660 [Github Repo](https://github.com/ocscoes/concepto-medicion) ![](https://raw.githubusercontent.com/ocscoes/concepto-medicion/main/portada.png)}
+}
+
 @techreport{castillo_contrastes_2012,
   type = {Temas de la Agenda Pública},
   title = {Contrastes entre la desigualdad económica objetiva y subjetiva en Chile},
@@ -213,7 +249,7 @@ TY - CHAP}
 
 @article{castillo_cual_2009,
   title = {¿Cuál Es La Brecha Salarial Justa? Opinión Pública y Legitimación de La Desigualdad Económica En Chile},
-  author = {Castillo, Juan- Carlos},
+  author = {Castillo, Juan-Carlos},
   year = {2009},
   journal = {Estudios Públicos},
   number = {113},
@@ -299,10 +335,23 @@ JC printed pdf},
   file = {/home/juank/Dropbox/zoterojcydocs/storage/H334RYJ2/Castillo et al. - 2013 - Educación, equidad y creencias distributivas Evid.pdf}
 }
 
+@techreport{castillo_hacia_2022,
+  type = {Documentos de Trabajo COES (En Edición)},
+  title = {Hacia Una Propuesta de Medición de Cohesión Social Con ELSOC - Estudio Longitudinal Social de Chile / COES},
+  author = {Castillo, Juan-Carlos and Iturra, Julio and Carrasco, Kevin},
+  year = {2022},
+  address = {Santiago},
+  institution = {COES},
+  url = {https://ocscoes.github.io/cohesion-elsoc/index.html},
+  abstract = {El objetivo de este informe es responder a un requerimiento que busca identificar los principales indicadores presentes en el Estudio Longitudinal Social de Chile (ELSOC) que permitan operacionalizar y medir el concepto de cohesión social a partir de una revisión sistemática de distintas propuestas y experiencias de estudios internacionales. Para ello, toma como principal referencia el documento de trabajo Conceptos y medición de cohesión social en proyectos internacionales de COES (Castillo et al., 2021). En primer lugar, se generará una sistematización de las principales propuestas de dimensiones, subdimensiones e indicadores bajo los cuales se ha medido cohesión social a nivel internacional, señalando las principales similitudes y diferencias entre cada estudio. En segundo lugar, se analizará en qué medida las principales dimensiones y subdimensiones de cohesión social son posibles de operacionalizar con indicadores presentes en ELSOC. Para ello, se elaborarán dos insumos principales. Por un lado, una planilla que presenta la sistematización general de las dimensiones, subdimensiones e indicadores de ELSOC y la fuente de información desde dónde proviene el planteamiento de medición de la variable y, por otro lado, un documento escrito que sintetiza esta sistematización de dimensiones, subdimensiones e indicadores de manera detallada.},
+  keywords = {social cohesion},
+  annotation = {ISSN 0719-6660 [Github Repo](https://github.com/ocscoes/cohesion-elsoc)}
+}
+
 @incollection{castillo_impuestos_2021,
   title = {Impuestos, Redistribución y Meritocracia: Cambios En Chile Entre 1999 y 2019},
   booktitle = {Impuestos Justos Para El Chile Que Viene},
-  author = {Castillo, Juan- Carlos and Iturra, Julio and Meneses, Francisco and Andrade, Valentina},
+  author = {Castillo, Juan-Carlos and Iturra, Julio and Meneses, Francisco and Andrade, Valentina},
   editor = {Atria, Jorge and Otero, Cristóbal},
   year = {2021},
   pages = {100--126},
@@ -317,7 +366,7 @@ JC printed pdf},
 
 @article{castillo_inequality_2012,
   title = {Is Inequality Becoming Just? Changes in Public Opinion about Economic Inequality in Chile},
-  author = {Castillo, Juan- Carlos},
+  author = {Castillo, Juan-Carlos},
   year = {2012},
   journal = {Bulletin of Latin American Research},
   volume = {31},
@@ -361,7 +410,7 @@ JC printed pdf},
 
 @article{castillo_just_2016,
   title = {Just Salaries in Unequal Conditions: An Exploratory Factorial Survey Study in Chile.},
-  author = {Castillo, Juan- Carlos},
+  author = {Castillo, Juan-Carlos},
   year = {2016},
   journal = {Cuadernos ISUC},
   volume = {1},
@@ -385,7 +434,7 @@ JC printed pdf},
 @article{castillo_legitimacy_2011a,
   title = {Legitimacy of Inequality in a Highly Unequal Context: Evidence from the Chilean Case},
   shorttitle = {Legitimacy of Inequality in a Highly Unequal Context},
-  author = {Castillo, Juan- Carlos},
+  author = {Castillo, Juan-Carlos},
   year = {2011},
   month = dec,
   journal = {Social Justice Research},
@@ -443,8 +492,8 @@ JC printed pdf},
   author = {Castillo, Juan and Sanhueza, Julio César Iturra and Rivas, Francisco Javier Meneses and Maldonado, Luis and Atria, Jorge},
   year = {2021},
   month = dec,
-  journal = {Socarxiv OSF preprint},
-  url = {https://osf.io/m7kef/},
+  journal = {Socarxiv OSF preprint / Enviado a revista},
+  url = {https://osf.io/preprints/socarxiv/mwk52/},
   urldate = {2020-06-19},
   langid = {american},
   keywords = {submitted},
@@ -610,7 +659,7 @@ JC printed pdf},
 @article{castillo_todos_2013,
   title = {Todos Somos de Clase Media: Sobre El Estatus Social Subjetivo En Chile},
   shorttitle = {Todos Somos de Clase Media},
-  author = {Castillo, Juan- Carlos and Miranda, Daniel and Cabib, Ignacio Madero},
+  author = {Castillo, Juan-Carlos and Miranda, Daniel and Cabib, Ignacio Madero},
   year = {2013},
   journal = {Latin American Research Review},
   volume = {48},
@@ -675,6 +724,15 @@ JC printed pdf},
   file = {/home/juank/Dropbox/zoterojcydocs/storage/ASTVXIQ2/Factor et al. - 2014 - Procedural justice, minorities, and religiosity.pdf;/home/juank/Dropbox/zoterojcydocs/storage/9H9ARGFR/15614263.2013.html}
 }
 
+@article{franetovic_preferences_2022,
+  title = {Preferences for Redistribution in Unequal Contexts: Changes in Latin America between 2008 and 2018},
+  author = {Franetovic, Gonzalo and Castillo, Juan-Carlos},
+  year = {2022},
+  journal = {Enviado a revista},
+  abstract = {In a developing and highly unequal region like Latin America, it is crucial to understand the determinants that affect people’s agreement with the redistribution of resources from the state. A series of theories focused on self-interest have continuously established a negative link between people’s income and their support for the reduction of inequalities through redistribution. Despite this, the evidence is scarce and sometimes contradictory while its study in Latin America is almost non-existent. Using data from the LAPOP Survey between 2008 and 2018, a longitudinal dimension is considered for the first time in the measurement of Latin American redistributive preferences, using hybrid multilevel regression models. In contrast to the evidence from studies conducted in other regions, the results reveal that in Latin America it is not possible to detect a clear association between income and redistributive preferences at specific times, but it is possible when changes occur in countries’ levels of inequality and economic development. Likewise, other elements that consistently affect preferences are evident, such as educational level, political ideology, and confidence in the political system. In light of this evidence, comparisons are made with previous research findings in industrialized countries, challenging rationalist theories of justice and solidarity.},
+  annotation = {[Github Repo](https://github.com/justicia-distributiva/redist\_lapop)}
+}
+
 @article{frei_fruto_2020a,
   title = {¿Fruto Del Esfuerzo? Los Cambios En Las Atribuciones Sobre Pobreza y Riqueza En Chile Entre 1996 y 2015},
   shorttitle = {?},
@@ -704,6 +762,14 @@ JC printed pdf},
   abstract = {This chapter aims to study distributive justice evaluations in LA over the last 23 years. We rely on distributive justice theory as a starting point, but we integrate insights from social psychology to enrich it. As such, we argue that people evaluate more unfairness when they live in contexts that are more unequal but that such an evaluation differs as a function of people’s ideologies. We examine how societal factors and ideologies shape distributive fairness evaluations to test this idea empirically. On the one hand, we examine whether distributive fairness evaluations have changed in LA over the last 23 years, and if so, how societal factors associate with such change. On the other hand, we test the extent to which ideological beliefs can explain people’s distributive fairness evaluations, that reach beyond structural and situational variables. Indeed, previous research showed that people evaluate less unfairness in the income distribution in LA when objective inequality was reduced between 1997 and 2015 (Reyes \& Gasparini, 2021). Our chapter builds on this research and extends it as we broaden the period (from 1997-2020), use all the spectrum of fairness evaluations (from fair to unfair), look at the different patterns of change between countries, and analyze the role of ideological beliefs on justice evaluations.}
 }
 
+@article{garcia-sanchez_two_2022,
+  title = {The Two Faces of Support for Redistribution in Colombia: Taxing the Wealthy or Assisting People in Poverty},
+  author = {{García-Sánchez}, Efraín and Castillo, Juan-Carlos and {Rodríguez-Bailón}, Rosa and Willis, Guillermo B.},
+  year = {2022},
+  journal = {Enviado a revista},
+  abstract = {Support for redistribution is crucial for reducing economic inequality. Despite people\&\#39;s desire for reducing extreme inequalities, they still have mixed opinions regarding how to do so. The aim of the article is to examine the underlying latent dimensions of support for redistribution and test its correlates to perceptions of and attitudes toward inequality. In two studies with independent samples from Colombia, we found that support for redistribution can be modelled as a latent construct depicting two different dimensions: one focus on taxing the wealthy and changing the income distribution schema, and other focused on assisting people in need and providing opportunities. We also found that the dimension related to taxing the wealthy (vs. assisting people in need) displayed higher internal reliability and correlated consistently with perceptions and attitudes toward attitudes: the higher the support for taxing the wealthy, the higher the perceptions and concerns of inequality, and the lower the inequality-justifying ideologies. This research unveils an underlying dimension of support for redistribution that shed light on what drives people’s redistributive preferences.}
+}
+
 @article{guerra_sintomatologia_2016,
   title = {Sintomatología en adolescentes victimizados sexualmente: El rol del apoyo de la familia y del grupo de pares},
   shorttitle = {Sintomatología en adolescentes victimizados sexualmente},
@@ -722,6 +788,16 @@ JC printed pdf},
   langid = {spanish},
   keywords = {abuso sexual,apoyo social,familia,family,pares,peer group,sexual abuse,sintomatología,social support,symptoms},
   file = {/home/juank/Dropbox/zoterojcydocs/storage/GJ8PIA8M/Guerra and Castillo - 2016 - Sintomatología en adolescentes victimizados sexual.pdf}
+}
+
+@article{iturra_percepcion_2022,
+  title = {Percepción de Desigualdad Económica y Su Influencia Sobre La Justificación de Las Diferencias de Ingreso Legítimas},
+  author = {Iturra, Julio and Castillo, Juan-Carlos and Rufs, Catalina and Maldonado, Luis},
+  year = {2022},
+  journal = {Enviado a revista},
+  url = {https://jciturras.github.io/desigualdad_recom/paper.pdf},
+  abstract = {Este estudio analiza el efecto de la información factual sobre desigualdad económica en la justificación de desigualdad salarial. Se implementó un diseño experimental a través de encuestas en una muestra representativa del área metropolitana de Santiago de Chile (n=732), con el objetivo de replicar los resultados reportados por Kriss-Stella Trump (2017) para el contexto de Suecia y Estados Unidos en torno a la justificación de brechas salariales. Nuestros resultados muestran que la información sobre salarios reales no impacta la justificación de la brecha salarial global. Sin embargo, se evidenció que la información sobre desigualdad salarial incrementa la justificación de brechas salarial según ocupaciones de alto y bajo estatus, lo cual es potenciado por la exposición conjunta a la condición que busca motivar la justificación del sistema social. Se discuten las limitantes metodológicas del estudio, en conjunto de las implicancias de la evidencia sobre el estudio sustantivo de actitudes hacia la desigualdad y la redistribución económica.},
+  annotation = {[Github repo](https://github.com/jciturras/desigualdad\_recom)}
 }
 
 @article{maderocabib_sobre_2012,
@@ -750,8 +826,8 @@ JC printed pdf},
   year = {2019},
   journal = {Preprint SocArxiv - OSF},
   pages = {1--10},
-  doi = {10.17605/OSF.IO/G4EK8},
-  url = {https://osf.io/g4ek8/},
+  doi = {10.31235/osf.io/7qgyv},
+  url = {https://osf.io/preprints/socarxiv/7qgyv/},
   urldate = {2020-06-11},
   abstract = {Este es un reporte/pre-print breve sobre  preferencias redistributivas en Chile en contexto internacional y en el tiempo, utilizando datos como ISSP y LAPOP. Una versión de este reporte fue publicado en CIPER en 2019 en https://www.ciperchile.cl/2019/12/06/la-demanda-por-igualdad-y-los-caminos-que-cuentan-con-amplio-respaldo-ciudadano/ y también en OSF https://osf.io/g4ek8/},
   keywords = {distributive preferences,meritocracy},
@@ -983,7 +1059,7 @@ Internal and external attributions of poverty - Germany 1991/ 2006. ISJP-Arbeits
 @article{schneider_poverty_2015a,
   title = {Poverty Attributions and the Perceived Justice of Income Inequality: A Comparison of East and West Germany},
   shorttitle = {Poverty Attributions and the Perceived Justice of Income Inequality},
-  author = {Schneider, Simone M. and Castillo, Juan- Carlos},
+  author = {Schneider, Simone M. and Castillo, Juan-Carlos},
   year = {2015},
   month = sep,
   journal = {Social Psychology Quarterly},
