--- a/content/publication/academic-presentations.bib
+++ b/content/publication/academic-presentations.bib
@@ -18,7 +18,6 @@
   address = {Leipzig (Online)},
   url = {https://ocscoes.github.io/presentaciones/presentation-cohesive-societies.html},
   abstract = {Aquí el abstract},
-  keywords = {legitimacy ideology Chile},
   annotation = {[Conference web](https://cohesivesocieties.net/)}
 }
 
@@ -139,6 +138,18 @@ JC printed pdf}
   file = {/home/juank/Dropbox/zoterojcydocs/storage/UN86FI58/Castillo - 2007 - Legitimation and Justice Ideologies in Contexts of.pdf}
 }
 
+@misc{castillo_measurement_2022,
+  type = {Research Institute Social Cohesion - Jahrestagung Forschungscluster 2},
+  title = {Measurement and Analysis of Social Cohesion},
+  author = {Castillo, Juan-Carlos and Bargsted, Matías},
+  year = {2022},
+  month = jan,
+  address = {Bremen  (Online)},
+  url = {https://ocscoes.github.io/presentaciones/RISC-bremen-january2022.html},
+  abstract = {Die empirische Erforschung des gesellschaftlichen Zusammenhalts erfordert, das Konzept bzw. die jeweils interessierenden Aspekte des gesellschaftlichen Zusammenhalts operationalisierbar und messbar zu machen. Dafür müssen nicht nur theoretische Konzeptionen des gesellschaftlichen Zusammenhalts ausgearbeitet, sondern auch geeignete Erhebungsinstrumente entwickelt und Dateninfrastrukturen geschaffen werden. Im FGZ ist deshalb mit dem Zusammenhaltspanel ein neuer Längsschnitt-Survey entwickelt worden, der sowohl etablierte wie neuartige Erhebungsinstrumente zur systematischen Analyse des gesellschaftlichen Zusammenhalts in Deutschland enthält. Mit dem Regionalpanel werden zudem 12 ausgewählte Regionen in Deutschland intensiv im Hinblick auf die lokalen Strukturbedingungen des Zusammenhalts vor Ort analysierbar. Mit diesen Surveys möchte das FGZ einen zentralen Beitrag leisten zum Aufbau und zur Erweiterung nationaler wie internationaler Dateninfrastrukturen zur empirischen Analyse des gesellschaftlichen Zusammenhalts. Das Panel beschäftigt sich vor diesem Hintergrund mit den Fragen der Konzeption und Analyse gesellschaftlichen Zusammenhalts auf Basis von quantitativen Surveys. Jan Delhey präsentiert Überlegungen und Analysen zum gesellschaftlichen Zusammenhalt aus den Perspektiven der Sozialindikatoren und Quality-of-Life- Forschung sowie des „Radar gesellschaftlicher Zusammenhalt“. Ein weiterer Vortrag stellt die konzeptionellen Überlegungen und empirischen Befunde zum gesellschaftlichen Zusammenhalt in Deutschland auf Basis der FGZ-Surveys des Zusammenhaltspanels und des Regionalpanels vor. Das Centro de Estudios del Conflicto y la Cohesión Social (COES) hat als chilenisches Pendant zum FGZ einen Survey zur Analyse des gesellschaftlichen Zusammenhalts in Chile entwickelt. Juan Carlos Castillo und Matías Bargsted (beide COES) präsentieren auf dessen Basis empirische Analysen zum gesellschaftlichen Zusammenhalt in einem der ungleichsten Länder der Welt.},
+  annotation = {[Github Repo](https://github.com/ocscoes/presentaciones)}
+}
+
 @misc{castillo_perception_2008a,
   title = {Perception and Legitimacy of Income Inequality in International Comparison},
   author = {Castillo, JC and Gerlitz, J. and Schrenker, M.},
@@ -159,13 +170,13 @@ JC printed pdf}
 
 @misc{castillo_protocolos_2022,
   type = {Laboratorio de Investigación Social Abierta (LISA) - COES},
-  title = {Protocolos de Análisis Reproducible y Reportes Dinámicos Con R / Rmarkdown},
+  title = {Protocolos Reproducibles y Reportes Dinámicos Con R / Rmarkdown},
   author = {Castillo, Juan-Carlos},
   year = {2022},
   month = jan,
   address = {Online},
   url = {https://lisa-coes.github.io/presentaciones/tallerRmarkdown-IPOEnero2022/taller-reprod-enero2022.html},
-  abstract = {Este curso tiene 2 partes. La primera introduce el lenguaje Markdown y su vinculación con R (RMarkdown) para desarrollar reportes que incluyen tanto texto como análisis de datos en una misma hoja de código. En la segunda parte se presenta un protocolo de análisis reproducible que permite un orden de carpetas de proyecto de manera simple y transparente. Este taller se realiza en el marco de la actividad "Aprendiendo Metodología por Valentina", actividad destinada a colaborar con el financiamiento de un tratarmiento médico de alto costo.},
+  abstract = {Este curso tiene 2 partes. La primera introduce el lenguaje Markdown y su vinculación con R (RMarkdown) para desarrollar reportes que incluyen tanto texto como análisis de datos en una misma hoja de código. En la segunda parte se presenta un protocolo de análisis reproducible que permite un orden de carpetas de proyecto de manera simple y transparente. Este taller se realiza en el marco de la actividad  Aprendiendo Metodología por Valentina, actividad destinada a colaborar con el financiamiento de un tratarmiento médico de alto costo.},
   annotation = {{$<$}iframe width="700"  height="450"  src="https://drive.google.com/file/d/1OsRZE-xBPv4T33VcLQvYk7oABf\_\_L-CK/preview" width="640" height="480" allow="autoplay"{$><$}/iframe{$>$} {$<$}iframe width="700"  height="450"  src="https://drive.google.com/file/d/1g98ZMizIBsdyPo5zhRPzNw6QKTq4YYNQ/preview" width="640" height="480" allow="autoplay"{$><$}/iframe{$>$}}
 }
 
