--- a/content/contacto/index.Rmd
+++ b/content/contacto/index.Rmd
@@ -4,10 +4,10 @@ title: "Contacto"
 
 ### Horas de reunión
 
-- Inscribirse abajo para horarios de oficina Miércoles en la tarde, una vez inscrito no es necesario enviar correo ni confirmar.
+- Inscribirse abajo para horarios de oficina Jueves en la tarde, una vez inscrito no es necesario enviar correo ni confirmar. Las reuniones online son en [Butter](https://app.butter.us/jccastillo/reuniones)
 
 
 <!-- Calendly inline widget begin -->
-<div class="calendly-inline-widget" data-url="https://calendly.com/juan_castillo/horasofi" style="min-width:320px;height:580px;"></div>
+<div class="calendly-inline-widget" data-url="https://calendly.com/juan_castillo/horasofi" style="min-width:320px;height:1280px;"></div>
 <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js"></script>
 <!-- Calendly inline widget end -->
