--- a/content/links/index.Rmd
+++ b/content/links/index.Rmd
@@ -98,6 +98,12 @@ I use software compatible with the principles of open science, this is, free and
 
 **Data preparation & modeling**
 
+- [DataEditR](https://github.com/DillonHammill/DataEditR)
+
+- [Radiant – Business analytics using R and Shiny](https://radiant-rstats.github.io/docs/)
+
+- [Autocorrelation Screening: A Potentially Efficient Method for Detecting Repetitive Response Patterns in Questionnaire Data](https://scholarworks.umass.edu/pare/vol27/iss1/2/)
+
 <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Estimating a Parameter from a Random Sample <a href="https://t.co/H2KxnLzDyH">pic.twitter.com/H2KxnLzDyH</a></p>&mdash; Chelsea Parlett-Pelleriti (@ChelseaParlett) <a href="https://twitter.com/ChelseaParlett/status/1338662205894508545?ref_src=twsrc%5Etfw">December 15, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
 
@@ -132,6 +138,8 @@ I use software compatible with the principles of open science, this is, free and
 
 
 **Visualization**
+
+- [5 CSS Animation libraries for every developer](https://animate.style/)
 
 - [Guess the correlation](http://guessthecorrelation.com/)
 
