--- a/content/publication/academic-publications.bib
+++ b/content/publication/academic-publications.bib
@@ -223,7 +223,6 @@
   address = {Leipzig (Online)},
   url = {https://ocscoes.github.io/presentaciones/presentation-cohesive-societies.html},
   abstract = {Aquí el abstract},
-  keywords = {legitimacy ideology Chile},
   annotation = {[Conference web](https://cohesivesocieties.net/)}
 }
 
@@ -745,7 +744,8 @@
   title = {Preferences for Redistribution in Unequal Contexts: Changes in Latin America between 2008 and 2018},
   author = {Franetovic, Gonzalo and Castillo, Juan-Carlos},
   year = {2022},
-  journal = {Enviado a revista},
+  journal = {Frontiers in Sociology},
+  url = {https://www.frontiersin.org/articles/10.3389/fsoc.2022.806458/abstract},
   abstract = {In a developing and highly unequal region like Latin America, it is crucial to understand the determinants that affect people’s agreement with the redistribution of resources from the state. A series of theories focused on self-interest have continuously established a negative link between people’s income and their support for the reduction of inequalities through redistribution. Despite this, the evidence is scarce and sometimes contradictory while its study in Latin America is almost non-existent. Using data from the LAPOP Survey between 2008 and 2018, a longitudinal dimension is considered for the first time in the measurement of Latin American redistributive preferences, using hybrid multilevel regression models. In contrast to the evidence from studies conducted in other regions, the results reveal that in Latin America it is not possible to detect a clear association between income and redistributive preferences at specific times, but it is possible when changes occur in countries’ levels of inequality and economic development. Likewise, other elements that consistently affect preferences are evident, such as educational level, political ideology, and confidence in the political system. In light of this evidence, comparisons are made with previous research findings in industrialized countries, challenging rationalist theories of justice and solidarity.},
   annotation = {[Github Repo](https://github.com/justicia-distributiva/redist\_lapop)}
 }
@@ -783,7 +783,7 @@
   title = {The Two Faces of Support for Redistribution in Colombia: Taxing the Wealthy or Assisting People in Poverty},
   author = {{García-Sánchez}, Efraín and Castillo, Juan-Carlos and {Rodríguez-Bailón}, Rosa and Willis, Guillermo B.},
   year = {2022},
-  journal = {Enviado a revista},
+  journal = {Accepted -  Frontiers in Sociology},
   abstract = {Support for redistribution is crucial for reducing economic inequality. Despite people\&\#39;s desire for reducing extreme inequalities, they still have mixed opinions regarding how to do so. The aim of the article is to examine the underlying latent dimensions of support for redistribution and test its correlates to perceptions of and attitudes toward inequality. In two studies with independent samples from Colombia, we found that support for redistribution can be modelled as a latent construct depicting two different dimensions: one focus on taxing the wealthy and changing the income distribution schema, and other focused on assisting people in need and providing opportunities. We also found that the dimension related to taxing the wealthy (vs. assisting people in need) displayed higher internal reliability and correlated consistently with perceptions and attitudes toward attitudes: the higher the support for taxing the wealthy, the higher the perceptions and concerns of inequality, and the lower the inequality-justifying ideologies. This research unveils an underlying dimension of support for redistribution that shed light on what drives people’s redistributive preferences.}
 }
 
@@ -824,7 +824,7 @@
   title = {Percepción de Desigualdad Económica y Su Influencia Sobre La Justificación de Las Diferencias de Ingreso Legítimas},
   author = {Iturra, Julio and Castillo, Juan-Carlos and Rufs, Catalina and Maldonado, Luis},
   year = {2022},
-  journal = {Revise \& resubmit},
+  journal = {Aceptada en Estudios Sociológicos},
   url = {https://jciturras.github.io/desigualdad_recom/paper.pdf},
   abstract = {Este estudio analiza el efecto de la información factual sobre desigualdad económica en la justificación de desigualdad salarial. Se implementó un diseño experimental a través de encuestas en una muestra representativa del área metropolitana de Santiago de Chile (n=732), con el objetivo de replicar los resultados reportados por Kriss-Stella Trump (2017) para el contexto de Suecia y Estados Unidos en torno a la justificación de brechas salariales. Nuestros resultados muestran que la información sobre salarios reales no impacta la justificación de la brecha salarial global. Sin embargo, se evidenció que la información sobre desigualdad salarial incrementa la justificación de brechas salarial según ocupaciones de alto y bajo estatus, lo cual es potenciado por la exposición conjunta a la condición que busca motivar la justificación del sistema social. Se discuten las limitantes metodológicas del estudio, en conjunto de las implicancias de la evidencia sobre el estudio sustantivo de actitudes hacia la desigualdad y la redistribución económica.},
   annotation = {[Github repo](https://github.com/jciturras/desigualdad\_recom)}
