--- a/content/post/coloquio/index.Rmd
+++ b/content/post/coloquio/index.Rmd
@@ -1,23 +1,50 @@
 ---
 title: "Coloquio de investigación en desigualdad y ciudadanía"
-
 ---
 
-### Jueves 16:00  a 17:00
+### Jueves 16:00  a 17:00/17:30 - Sala 334
 
 El objetivo de este coloquio es presentar trabajos en desarrollo que se encuentran temáticamente vinculados a áreas de desigualdad y/o ciudadanía, y que utilizan metodologías de análisis cuantitativo. Para estudiantes de:
-
 
 - Seminario de grado (4to)
 - Seminario de título 1 y 2 (5to)
 - Magister/educación continua
 - Doctorado
 
-Para detalles de los requisitos de evaluación (para quienes lo requieran) ver página de [Tesis](/tesis/)
+Para detalles de los requisitos de evaluación (para quienes lo requieran) ver página de [Tesis de Grado ](/post/seminarios/)
+
+### 1er sem 2022
+
+Título 1:
+
+- Karen Sepulveda
+- Héctor Lara
+- Paula Larenas
+- Catalina Miranda
+
+Título 2:
+
+- Andreas Laffert
+- Martín Venegas
+
+Magíster:
+
+- Anaís Herrera
+- Kevin Carrasco
+- Francisco Meneses
+- Matías Retamales
+
+Doctorado:
+
+- Dai Amante
+
+**Calendarización**
+
+<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRICtSkQ5iVPIgkuQsDaxgN54S1QZdEg6ZGoXNpsLXl6e1nQBaLTVOo0jd3hCKiDStaYOOZohWvPDgz/pubhtml?widget=true&amp;headers=false" width="700" height="650"></iframe>
 
 
-<br>
+# Semestres anteriores
 
-## Calendarización 2do sem
+## Calendarización 2do sem 2021
 
 <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRe36nX3SsL8poUp0of2aJT8-b19IRfGJfy1yvUQFcEDNFR0F4VSrJSN9xVTQDLikHng94vw8uGTAIF/pubhtml?widget=true&amp;headers=false" width="700" height="650"></iframe>
