--- a/content/post/seminarios/index.Rmd
+++ b/content/post/seminarios/index.Rmd
@@ -1,15 +1,15 @@
 ---
-title: " Seminarios de Grado / Título / Tesis"
+title: "Desarrollo de tesis de grado"
 author: " "
 ---
 
 La guía de seminarios/memorias/tesis es una actividad de acompañamiento semestral que incluye:
 
-- presentaciones en el [Coloquio de Investigación en Desigualdad y Ciudadanía](/post/coloquio/)
+- asistencia semanal y presentación en el [Coloquio de Investigación en Desigualdad y Ciudadanía](/post/coloquio/). Parte central de la elaboración de trabajos de investigación es aprender de cómo presentan su trabajo otr_s investigadores, las preguntas que surgen del público, los comentarios y la defensa de los argumentos, y la retroalimentación al presentar
 
-- entrega de dos informes semestrales
+- entrega de dos informes semestrales (ver abajo detalle)
 
-- reuniones de evaluación y asesoría
+- reuniones de evaluación y asesoría (al menos dos al semestre, anotarse en [página de contacto](/contacto/))
 
 <br>
 
