--- a/content/post/coloquio/index.Rmd
+++ b/content/post/coloquio/index.Rmd
@@ -11,7 +11,7 @@ El objetivo de este coloquio es presentar trabajos en desarrollo que se encuentr
 - Magister/educación continua
 - Doctorado
 
-Para detalles de los requisitos de evaluación (para quienes lo requieran) ver página de [Tesis de Grado ](/post/seminarios/)
+Para detalles de los requisitos de evaluación (para quienes lo requieran) ver página de [Tesis de Grado ](/post/desarrollo-tesis/)
 
 ### 1er sem 2022
 
