fechas coloquio y seminario cepal

--- a/content/post/coloquio/index.Rmd
+++ b/content/post/coloquio/index.Rmd
@@ -2,45 +2,46 @@
 title: "Coloquio de investigación en desigualdad y ciudadanía"
 ---
 
-### Jueves 16:00  a 17:00/17:30 - Sala 334
-
-El objetivo de este coloquio es presentar trabajos en desarrollo que se encuentran temáticamente vinculados a áreas de desigualdad y/o ciudadanía, y que utilizan metodologías de análisis cuantitativo. Para estudiantes de:
+El objetivo de este coloquio mensual es presentar trabajos en desarrollo que se encuentran temáticamente vinculados a áreas de desigualdad y/o ciudadanía, y que utilizan metodologías de análisis cuantitativo. Para estudiantes de:
 
 - Seminario de grado (4to)
 - Seminario de título 1 y 2 (5to)
 - Magister/educación continua
 - Doctorado
 
-Para detalles de los requisitos de evaluación (para quienes lo requieran) ver página de [Tesis de Grado ](/post/desarrollo-tesis/)
+Para detalles de los requisitos de evaluación (para quienes lo requieran) ver página de [Desarrollo de tesis ](/post/desarrollo-tesis/)
 
 ### 1er sem 2022
 
-Título 1:
-
-- Karen Sepulveda
-- Héctor Lara
-- Paula Larenas
-- Catalina Miranda
-
 Título 2:
 
-- Andreas Laffert
-- Martín Venegas
+- Presentaciones Jueves 7 de Abril 2022 15-17:00
+- Inscritos
+  - Andreas Laffert
+  - Martín Venegas
 
-Magíster:
 
-- Anaís Herrera
-- Kevin Carrasco
-- Francisco Meneses
-- Matías Retamales
+Título 1:
+
+- Presentaciones Jueves 5 de Mayo 2022 15-18:00
+- Inscritos:
+  - Karen Sepulveda
+  - Héctor Lara
+  - Paula Larenas
+  - Catalina Miranda
+
+Magíster/posgrado:
+
+- Presentaciones Jueves 9 de Junio 2022 15-18:00
+- Inscritos:
+  - Anaís Herrera
+  - Kevin Carrasco
+  - Francisco Meneses
+  - Matías Retamales
 
 Doctorado:
 
 - Dai Amante
-
-**Calendarización**
-
-<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRICtSkQ5iVPIgkuQsDaxgN54S1QZdEg6ZGoXNpsLXl6e1nQBaLTVOo0jd3hCKiDStaYOOZohWvPDgz/pubhtml?widget=true&amp;headers=false" width="700" height="650"></iframe>
 
 
 # Semestres anteriores
