--- a/content/post/desarrollo-tesis/index.Rmd
+++ b/content/post/desarrollo-tesis/index.Rmd
@@ -5,7 +5,7 @@ author: " "
 
 La guía de seminarios/memorias/tesis es una actividad de acompañamiento semestral que incluye:
 
-- asistencia semanal y presentación en el [Coloquio de Investigación en Desigualdad y Ciudadanía](/post/coloquio/). Parte central de la elaboración de trabajos de investigación es aprender de cómo presentan su trabajo otr_s investigadores, las preguntas que surgen del público, los comentarios y la defensa de los argumentos, y la retroalimentación al presentar
+- asistencia y presentación en el [Coloquio de Investigación en Desigualdad y Ciudadanía](/post/coloquio/). Parte central de la elaboración de trabajos de investigación es aprender de cómo presentan su trabajo otr_s investigadores, las preguntas que surgen del público, los comentarios y la defensa de los argumentos, y la retroalimentación al presentar
 
 - entrega de dos informes semestrales (ver abajo detalle)
 
@@ -13,9 +13,9 @@ La guía de seminarios/memorias/tesis es una actividad de acompañamiento semest
 
 <br>
 
-## Informes
+## Informes y fechas
 
-Se entregarán 2 informes durante el semestre, uno de avance y uno final.
+Se entregarán 2 informes durante el semestre, uno de avance y uno final. Por regla general el informe de avance se entrega hasta dos semanas después de la presentación, o si no se ha alcanzado a presentar a más tardar a fines de Mayo. El informe final se entrega la última semana lectiva del semestre, y debe incluir un párrafo de autoevaluación y una nota propuesta.
 
 - Seminario de grado:
 
@@ -35,13 +35,16 @@ Se entregarán 2 informes durante el semestre, uno de avance y uno final.
 
   - informe final: incorporación de comentarios y finalización de conclusiones.
 
+
+
+
 <br>
 
 ### Funcionamiento:
 
-- seminaristas/tesisas se incorporan a canal de Slack, donde se comparte información relativa a las investigaciones y se hace entrega de los informes
+- seminaristas/tesistas se incorporan a canal de Slack, donde se comparte información relativa a las investigaciones y se hace entrega de los informes
 
-- la entrega puede ser en pdf o html. Se recomienda usar [tesisfacsodown](https://juancarloscastillo.github.io/tesisfacsodown/) (video taller [aquí](https://www.dropbox.com/s/u3g2x74nj31jsu1/zoom_0.mp4?raw=1)), que permite ambas salidas. Documento de presentación [aquí](documents/talleres-cursos/tesisfacsodown/tesisfacsodown.html)
+- la entrega de informes puede ser en pdf o html. Se recomienda usar [tesisfacsodown](https://juancarloscastillo.github.io/tesisfacsodown/) (video taller [aquí](https://www.dropbox.com/s/u3g2x74nj31jsu1/zoom_0.mp4?raw=1)), que permite ambas salidas. Documento de presentación [aquí](documents/talleres-cursos/tesisfacsodown/tesisfacsodown.html)
 
 - los comentarios se realizarán mediante [hypotes.is](https://hypothes.is/)
 
