--- a/content/publication/academic-publications.bib
+++ b/content/publication/academic-publications.bib
@@ -745,9 +745,9 @@
   author = {Franetovic, Gonzalo and Castillo, Juan-Carlos},
   year = {2022},
   journal = {Frontiers in Sociology},
-  url = {https://www.frontiersin.org/articles/10.3389/fsoc.2022.806458/abstract},
+  url = {https://doi.org/10.3389/fsoc.2022.806458},
   abstract = {In a developing and highly unequal region like Latin America, it is crucial to understand the determinants that affect people’s agreement with the redistribution of resources from the state. A series of theories focused on self-interest have continuously established a negative link between people’s income and their support for the reduction of inequalities through redistribution. Despite this, the evidence is scarce and sometimes contradictory while its study in Latin America is almost non-existent. Using data from the LAPOP Survey between 2008 and 2018, a longitudinal dimension is considered for the first time in the measurement of Latin American redistributive preferences, using hybrid multilevel regression models. In contrast to the evidence from studies conducted in other regions, the results reveal that in Latin America it is not possible to detect a clear association between income and redistributive preferences at specific times, but it is possible when changes occur in countries’ levels of inequality and economic development. Likewise, other elements that consistently affect preferences are evident, such as educational level, political ideology, and confidence in the political system. In light of this evidence, comparisons are made with previous research findings in industrialized countries, challenging rationalist theories of justice and solidarity.},
-  annotation = {[Accepted version](/docs/franetovic-castillo2022Frontiers.pdf) {$<$}br{$>$} [Github Repo](https://github.com/justicia-distributiva/redist\_lapop)},
+  annotation = {[Github Repo](https://github.com/justicia-distributiva/redist\_lapop)},
   file = {/home/juank/Dropbox/zoterojcydocs/storage/A39KGTUG/Franetovic and Castillo - 2022 - Preferences for redistribution in unequal contexts.PDF}
 }
 
@@ -777,6 +777,7 @@
   year = {2022},
   publisher = {Work in progress},
   address = {-},
+  url = {https://osf.io/wz3rx/},
   abstract = {This chapter aims to study distributive justice evaluations in LA over the last 23 years. We rely on distributive justice theory as a starting point, but we integrate insights from social psychology to enrich it. As such, we argue that people evaluate more unfairness when they live in contexts that are more unequal but that such an evaluation differs as a function of people’s ideologies. We examine how societal factors and ideologies shape distributive fairness evaluations to test this idea empirically. On the one hand, we examine whether distributive fairness evaluations have changed in LA over the last 23 years, and if so, how societal factors associate with such change. On the other hand, we test the extent to which ideological beliefs can explain people’s distributive fairness evaluations, that reach beyond structural and situational variables. Indeed, previous research showed that people evaluate less unfairness in the income distribution in LA when objective inequality was reduced between 1997 and 2015 (Reyes \& Gasparini, 2021). Our chapter builds on this research and extends it as we broaden the period (from 1997-2020), use all the spectrum of fairness evaluations (from fair to unfair), look at the different patterns of change between countries, and analyze the role of ideological beliefs on justice evaluations.}
 }
 
@@ -785,6 +786,7 @@
   author = {{García-Sánchez}, Efraín and Castillo, Juan-Carlos and {Rodríguez-Bailón}, Rosa and Willis, Guillermo B.},
   year = {2022},
   journal = {Accepted -  Frontiers in Sociology},
+  url = {https://doi.org/10.3389/fsoc.2022.773378},
   abstract = {Support for redistribution is crucial for reducing economic inequality. Despite people\&\#39;s desire for reducing extreme inequalities, they still have mixed opinions regarding how to do so. The aim of the article is to examine the underlying latent dimensions of support for redistribution and test its correlates to perceptions of and attitudes toward inequality. In two studies with independent samples from Colombia, we found that support for redistribution can be modelled as a latent construct depicting two different dimensions: one focus on taxing the wealthy and changing the income distribution schema, and other focused on assisting people in need and providing opportunities. We also found that the dimension related to taxing the wealthy (vs. assisting people in need) displayed higher internal reliability and correlated consistently with perceptions and attitudes toward attitudes: the higher the support for taxing the wealthy, the higher the perceptions and concerns of inequality, and the lower the inequality-justifying ideologies. This research unveils an underlying dimension of support for redistribution that shed light on what drives people’s redistributive preferences.}
 }
 
