--- a/content/links/index.Rmd
+++ b/content/links/index.Rmd
@@ -98,6 +98,8 @@ I use software compatible with the principles of open science, this is, free and
 
 **Data preparation & modeling**
 
+- [Marginalia: Marginal effects in R, by Andrew Heiss](https://www.andrewheiss.com/blog/2022/05/20/marginalia/)
+
 - [DataEditR](https://github.com/DillonHammill/DataEditR)
 
 - [Radiant – Business analytics using R and Shiny](https://radiant-rstats.github.io/docs/)
@@ -209,6 +211,13 @@ I use software compatible with the principles of open science, this is, free and
 - [Good tips for academic writing from Kevin Lafferty](http://trophiccascades.forestry.oregonstate.edu/sites/trophic/files/Lafferty_WritingScientificPaper.pdf)
 
 - [Guidelines for quantitative submissions ASR](http://journals.sagepub.com/doi/abs/10.1177/0003122418806282)
+
+
+# Search information & literature reviews
+
+- [https://elicit.org/](https://elicit.org/)
+
+- [https://www.connectedpapers.com/](https://www.connectedpapers.com/)
 
 
 # Otros varios
