--- a/content/publication/academic-presentations.bib
+++ b/content/publication/academic-presentations.bib
@@ -77,6 +77,17 @@ JC printed pdf}
   keywords = {legitimacy ideology Chile}
 }
 
+@misc{castillo_herramientas_2022,
+  type = {Presentación En El Seminario "Ciencia Abierta, ¿es Ciencia Accesible?"},
+  title = {Herramientas Para La Apertura Del Flujo de Investigación Científica},
+  author = {Castillo, Juan-Carlos},
+  year = {2022},
+  month = jun,
+  address = {Universidad Iberoamericana de México  (Online)},
+  url = {https://lisa-coes.github.io/presentaciones/Ibero-MEX-Jun2022/iberomex2022.html},
+  annotation = {[Github Repo](https://github.com/lisa-coes/presentaciones)}
+}
+
 @inproceedings{castillo_inequality_2010a,
   title = {Is Inequality Becoming Just? Changes in Public Opinion about Economic Inequality in Chile},
   booktitle = {Conference of the Latin American Studies Association - LASA},
@@ -236,6 +247,17 @@ JC printed pdf}
   publisher = {Universidad de Chile},
   address = {Santiago de Chile},
   keywords = {legitimacy ideology Chile}
+}
+
+@misc{iturra_dinamicas_2020,
+  type = {Seminario ELSOC Cambio Social En Chile},
+  title = {Dinámicas de Legitimación: Percepción de Desigualdad Actual y Justificación de Desigualdad Futura},
+  author = {Iturra, Julio and Castillo, Juan-Carlos},
+  year = {2020},
+  month = jun,
+  address = {Santiago ( Online},
+  url = {https://jciturras.github.io/dinamic-legit/slides/dinamic-legit_elsoc.html#1},
+  annotation = {[Github Repo](https://github.com/jciturras/dinamic-legit)}
 }
 
 @techreport{schneider_influence_2009a,
