--- a/content/publication/academic-presentations.bib
+++ b/content/publication/academic-presentations.bib
@@ -78,7 +78,7 @@ JC printed pdf}
 }
 
 @misc{castillo_herramientas_2022,
-  type = {Presentación En El Seminario "Ciencia Abierta, ¿es Ciencia Accesible?"},
+  type = {Presentación En El Seminario: Ciencia Abierta, ¿es Ciencia Accesible?},
   title = {Herramientas Para La Apertura Del Flujo de Investigación Científica},
   author = {Castillo, Juan-Carlos},
   year = {2022},
